Fixed view shift bug when undoing & redoing

--- a/src/styles/library.css
+++ b/src/styles/library.css
@@ -72,7 +72,3 @@
     font-style: italic;
     font-size: 2vh;
 }
-
-#info .title:empty:after {
-    content: "Please select a part!";
-}
